--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,9 +15,8 @@
                 "--no-osm",
                 "--satmode",
                 "--max_samples", "20000",
-                "--batch_size", "128",
-                "--num_epochs", "2500",
-                "--in_memory",
+                "--batch_size", "64",
+                // "--in_memory",
                 "-lr", "3e-5",
                 "--lr_step", "10",
                 "--lam_builtmask", "1000"
@@ -35,8 +34,17 @@
                 "--no-osm",
                 "--satmode",
                 // "--max_samples", "5000",
-                "--num_epochs", "2500",
+                "--num_epochs", "1500",
+                "--lam_builtmask", "0.0",
+                "--batch_size", "256",
+                "--lr_step", "10",
+                "-lr", "1e-4",
+                "--lr_step", "30",
                 // "--in_memory"
+                "--lr_gamma", "0.75",
+                // "--weightdecay", "0.001",
+                "--feature_extractor", "resnet50",
+                "--merge_aug"
                 
             ]
         }
