--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,8 +27,18 @@
                 // "--in_memory",
                 "-lr", "3e-5",
                 "--lr_step", "10",
-                "--lam_builtmask", "1000",
+                "--lam_builtmask", "0.0",
                 // "--loss", "log_l1_loss"
+                "--model", "JacobsUNet",
+                "--feature_extractor", "vgg11",
+                // "--loss", "log_mse_loss", "l1_loss",
+                "--loss", "log_mse_loss",
+                // "--lam", "1.0", "0.01",
+                "--lam", "1.0",
+                "--lassoreg", "0.0",
+                "-S1",
+                "-S2",
+                "-VIIRS"
             ]
         },
         {
@@ -50,17 +60,25 @@
                 "--lr_step", "15",
                 // "--in_memory"
                 "--lr_gamma", "0.75",
-                // "--weightdecay", "0.001",
+                // "--weightdecay", "0.000001",
                 // "--feature_extractor", "resnet18",
                 // "--feature_extractor", "mobileone_s0",
-                "--model", "ResBlocks"
+                "--model", "JacobsUNet",
                 "--feature_extractor", "vgg11",
                 // "--feature_extractor", "resnet50",
                 // "--merge_aug",
                 // "-S1",
-                "--loss", "log_mse_loss",
+                // "--loss", "log_mse_loss", "mse_loss",
+                // "--loss", "log_mse_loss", "l1_loss",
+                "--loss", "l1_loss", "log_mse_loss",
+                // "--loss", "log_mse_loss",
+                // "--lam", "1.0", "0.00001",
+                // "--lam", "1.0", "0.005",
+                "--lam", "1.0", "100.0",
+                "-S1",
                 "-S2",
-                "-VIIRS"
+                // "-tv", "1.0"
+                // "-VIIRS"
                 
             ]
         }
