--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -124,8 +124,8 @@
             "console": "integratedTerminal",
             "args":[
                 "/scratch/metzgern/HAC/data/AfricaSat/merged/EE/pri",
-                "/scratch/metzgern/HAC/data/AfricaSat/merged/EE/pri",
-                "10",
+                "/scratch/metzgern/HAC/data/AfricaSat/processed/EE/pri",
+                "100",
             ]
         }, 
         {
@@ -279,7 +279,7 @@
                 "--lam_builtmask", "0.0",
                 "--batch_size", "64",
                 "--lr_step", "10",
-                "-lr", "1e-3",
+                "-lr", "1e-4",
                 "--lr_step", "15",
                 // "--in_memory"
                 "--lr_gamma", "0.75",
@@ -287,20 +287,23 @@
                 // "--feature_extractor", "resnet18",
                 // "--feature_extractor", "mobileone_s0",
                 "--model", "JacobsUNet",
-                "--feature_extractor", "resnet18",
+                "--feature_extractor", "vgg11",
+                // "--feature_extractor", "resnet18",
                 // "--feature_extractor", "resnet50",
                 // "--merge_aug",
                 // "-S1",
                 // "--loss", "log_mse_loss", "mse_loss",
                 // "--loss", "log_mse_loss", "l1_loss",
-                "--loss", "l1_loss", //"log_mse_loss",
-                // "--loss", "log_mse_loss",
+                // "--loss", "l1_loss", //"log_mse_loss",
+                "--loss", "log_mse_loss",
                 // "--lam", "1.0", "0.00001",
                 // "--lam", "1.0", "0.005",
                 "--lam", "1.0", //"10.0",
+                "--lam", "1000",
                 // "-S1",
                 "-S2",
-                "--feature_dim", "16"
+                "--feature_dim", "16",
+                "--random_season",
                 // "-tv", "1.0"
                 // "-VIIRS" 
             ]
