--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,13 @@
             "program": "utils/rasterize_ch.py",
             "console": "integratedTerminal",
             "justMyCode": true,
+        },{
+            "name": "rasterize CH2",
+            "type": "python",
+            "request": "launch",
+            "program": "utils/rasterize_ch2.py",
+            "console": "integratedTerminal",
+            "justMyCode": true,
         },
         {
             "name": "CHE 01_download_gee_country.py",
@@ -118,7 +125,16 @@
             "args": [
                 "/scratch/metzgern/HAC/data/PopMapData/raw/EE/pri"
             ]
-        }, 
+        },         {
+            "name": "03_merge_tiffs.py, 2017",
+            "type": "python",
+            "request": "launch",
+            "program": "utils/03_merge_tiffs.py",
+            "console": "integratedTerminal",
+            "args": [
+                "/scratch/metzgern/HAC/data/PopMapData/raw/EE/pri2017"
+            ]
+        },
         {
             "name": "04_preprocess_pri_shapefile.py",
             "type": "python",
@@ -140,7 +156,7 @@
             "console": "integratedTerminal",
             "args":[
                 "/scratch/metzgern/HAC/data/PopMapData/merged/EE/pri",
-                "/scratch/metzgern/HAC/data/PopMapData/processed/EE/pri",
+                "/scratch/metzgern/HAC/data/PopMapData/processed/EE/pri2017",
                 "100",
             ]
         }, 
@@ -293,9 +309,9 @@
                 // "--max_samples", "5000",
                 "--num_epochs", "100",
                 "--lam_builtmask", "0.0",
-                "--batch_size", "256",
+                "--batch_size", "384",
                 "--lr_step", "10",
-                "-lr", "3e-4",
+                "-lr", "1e-4",
                 "--lr_step", "15",
                 // "--in_memory"
                 "--lr_gamma", "0.75",
@@ -303,6 +319,7 @@
                 // "--feature_extractor", "resnet18",
                 // "--feature_extractor", "mobileone_s0",
                 "--model", "JacobsUNet",
+                // "--feature_extractor", "vgg11",
                 "--feature_extractor", "vgg11",
                 // "--feature_extractor", "resnet18",
                 // "--feature_extractor", "resnet50",
@@ -311,15 +328,18 @@
                 // "--loss", "log_mse_loss", "mse_loss",
                 // "--loss", "log_mse_loss", "l1_loss",
                 // "--loss", "l1_loss", //"log_mse_loss",
-                "--loss", "log_mse_loss",
+                // "--loss", "log_mse_loss",
+                "--loss", "l1_loss",
                 // "--lam", "1.0", "0.00001",
                 // "--lam", "1.0", "0.005",
-                "--lam", "1000",
+                // "--lam", "1000",
+                "--lam", "1",
+                "--lam_adv", "100",
                 // "-S1",
                 "-S2",
                 "--feature_dim", "16",
                 "--random_season",
-                "--target_region", "pri",
+                "--target_region", "pri2017",
                 "--adversarial",
                 // "-tv", "1.0"
                 // "-VIIRS" 
@@ -336,7 +356,7 @@
                 "--no-osm",
                 "--satmode",
                 "--max_samples", "5000",
-                "--num_epochs", "1500",
+                "--num_epochs", "100",
                 "--lam_builtmask", "0.0",
                 "--batch_size", "128",
                 "--lr_step", "10",
@@ -350,9 +370,9 @@
                 "-S2",
                 "--feature_dim", "16",
                 "--random_season",
-                "--target_region", "pri",
-                "--adversarial"
-                // "--resume", "/home/pf/pfstaff/projects/metzgern_Sat2Pop/POMELOv2_results/So2Sat/experiment_283_128/best_model.pth"
+                "--target_region", "pri2017",
+                "--adversarial",
+                "--resume", "/home/pf/pfstaff/projects/metzgern_Sat2Pop/POMELOv2_results/So2Sat/experiment_386_968/best_model.pth"
             ]
         }
     ]
