--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -297,7 +297,7 @@
             ]
         },
         {
-            "name": "train, smp",
+            "name": "train, smp, DANN",
             "type": "python",
             "request": "launch",
             "program": "run_train.py",
@@ -315,34 +315,56 @@
                 "--lr_step", "15",
                 // "--in_memory"
                 "--lr_gamma", "0.75",
-                // "--weightdecay", "0.000001",
-                // "--feature_extractor", "resnet18",
-                // "--feature_extractor", "mobileone_s0",
                 "--model", "JacobsUNet",
-                // "--feature_extractor", "vgg11",
                 "--feature_extractor", "vgg11",
-                // "--feature_extractor", "resnet18",
-                // "--feature_extractor", "resnet50",
-                // "--merge_aug",
                 // "-S1",
-                // "--loss", "log_mse_loss", "mse_loss",
                 // "--loss", "log_mse_loss", "l1_loss",
-                // "--loss", "l1_loss", //"log_mse_loss",
-                // "--loss", "log_mse_loss",
                 "--loss", "l1_loss",
-                // "--lam", "1.0", "0.00001",
-                // "--lam", "1.0", "0.005",
-                // "--lam", "1000",
-                "--lam", "100",
-                "--lam_adv", "1000",
+                "--lam", "1",
+                "--lam_adv", "100",
                 // "-S1",
                 "-S2",
                 "--feature_dim", "16",
                 "--random_season",
                 "--target_regions", "pri2017",
                 "--adversarial",
-                // "-tv", "1.0"
-                // "-VIIRS" 
+                "--excludeZH",
+                "--classifier", "v7"
+            ]
+        },
+        {
+            "name": "train, smp",
+            "type": "python",
+            "request": "launch",
+            "program": "run_train.py",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "args":[
+                "--no-osm",
+                "--satmode",
+                // "--max_samples", "5000",
+                "--num_epochs", "100",
+                "--lam_builtmask", "0.0",
+                // "--batch_size", "192",
+                "--batch_size", "384",
+                "--lr_step", "10",
+                "-lr", "1e-4",
+                "--lr_step", "15",
+                // "--in_memory"
+                "--lr_gamma", "0.75",
+                "--model", "JacobsUNet",
+                "--feature_extractor", "vgg11",
+                // "-S1",
+                // "--loss", "log_mse_loss", "l1_loss",
+                "--loss", "l1_loss",
+                "--lam", "1",
+                // "--lam_adv", "100",
+                // "-S1",
+                "-S2",
+                "--feature_dim", "16",
+                "--random_season",
+                "--target_regions", "pri2017",
+                // "--adversarial",
                 "--excludeZH"
             ]
         },
