upload new da code

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,6 +18,20 @@
             "program": "utils/rasterize_ch2.py",
             "console": "integratedTerminal",
             "justMyCode": true,
+        },{
+            "name": "test CORAL",
+            "type": "python",
+            "request": "launch",
+            "program": "utils/CORAL.py",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+        },{
+            "name": "test MMD",
+            "type": "python",
+            "request": "launch",
+            "program": "utils/MMD.py",
+            "console": "integratedTerminal",
+            "justMyCode": true,
         },
         {
             "name": "CHE 01_download_gee_country.py",
@@ -357,8 +371,9 @@
                 "--num_epochs", "100",
                 "--lam_builtmask", "0.0",
                 // "--batch_size", "192",
-                "--batch_size", "384",
+                "--batch_size", "128",
                 "--lr_step", "10",
+                // "-lr", "7.5e-5",
                 "-lr", "1e-4",
                 "--lr_step", "10",
                 // "--in_memory"
@@ -376,12 +391,16 @@
                 "--loss", "l1_loss",
                 "--lam", "1",
                 // "--lam_adv", "100",
-                // "-S1",
-                "-S2",
+                "-S1",
+                "-dw","2",
+                // "-S2",
                 "--feature_dim", "16",
                 "--random_season",
                 "--target_regions", "pri2017",
                 // "--adversarial",
+                "--classifier", "v8",
+                // "--CORAL",
+                // "--lam_coral", "1.0",
                 "--excludeZH",
                 "--save-dir", "/scratch2/metzgern/HAC/POMELOv2_results"
             ]
@@ -475,22 +494,27 @@
                 "--max_samples", "5000",
                 "--num_epochs", "100",
                 "--lam_builtmask", "0.0",
-                "--batch_size", "8",
+                "--batch_size", "32",
                 "--lr_step", "10",
                 "-lr", "1e-4",
-                "--lr_step", "15", 
+                "--lr_step", "10", 
                 "--lr_gamma", "0.75", 
                 "--model", "JacobsUNet",
-                "--feature_extractor", "vgg11", 
-                "--loss", "log_mse_loss",  
-                "--lam", "1000",
+                "--feature_extractor", "resnet18", 
+                "--loss", "l1_loss",  
+                "--lam", "1",
+                "--down", "3",
                 "-S2",
+                "-S1",
+                "--NIR",
                 "--feature_dim", "16",
                 "--random_season",
                 "--target_regions", "pri2017",
-                "--adversarial",
+                // "--adversarial",
+                // "--CORAL",
+                "--MMD",
                 // "--resume", "/home/pf/pfstaff/projects/metzgern_Sat2Pop/POMELOv2_results/So2Sat/experiment_386_968/best_model.pth",
-                "--classifier", "v5",
+                // "--classifier", "v5",
                 "--excludeZH"
             ]
         }
