--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -365,10 +365,12 @@
             "console": "integratedTerminal",
             "justMyCode": false,
             "args":[
-                "--no-osm",
-                "--satmode",
-                // "--max_samples", "5000",
-                "--num_epochs", "100",
+                // "--no-osm",
+                "-o",
+                // "--satmode",
+                "-s",
+                "--max_samples", "40000",
+                "-e", "100",
                 // "--batch_size", "192",
                 "--batch_size", "128",
                 "-lr", "1e-4",
