--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -364,34 +364,26 @@
             "program": "run_train.py",
             "console": "integratedTerminal",
             "justMyCode": false,
-            "args":[
-                // "--no-osm",
-                "-o",
-                // "--satmode",
+            "args":[ 
+                "-o", 
                 "-s",
-                "--max_samples", "40000",
-                "-e", "100",
-                // "--batch_size", "192",
-                "--batch_size", "128",
-                "-lr", "1e-4",
-                "--model", "JacobsUNet",
-                "--feature_extractor", "resnet18", //"tu-mobilenetv3_rw",
+                // "--max_samples", "50000",
+                "-e", "100", 
+                "-b", "128",
+                "-lr", "1e-4", 
                 "--loss", "l1_loss",
-                "--lam", "1",
-                // "--lam_adv", "100",
+                "--lam", "1", 
                 "-S2",
                 "-S1",
                 "-NIR",
                 "-dw","2",
-                "--feature_dim", "16",
-                "--random_season",
-                "--target_regions", "pri2017",
-                // "--adversarial",
-                "--classifier", "v8",
+                "-f", "16",
+                "-rse",
+                "-treg", "pri2017", 
                 // "--CORAL",
                 // "--lam_coral", "1.0",
-                "--excludeZH",
-                "--supmode", "weaksup"
+                "-exZH",
+                "-smo", "weaksup"
             ]
         },
         {
@@ -478,35 +470,30 @@
             "console": "integratedTerminal",
             "justMyCode": true,
             "args":[
-                "--no-osm",
-                "--satmode",
-                "--max_samples", "5000",
-                "--num_epochs", "100",
-                "--lam_builtmask", "0.0",
-                "--batch_size", "32",
-                "--lr_step", "10",
-                "-lr", "1e-4",
-                "--lr_step", "10", 
-                "--lr_gamma", "0.75", 
-                "--model", "JacobsUNet",
-                "--feature_extractor", "resnet18", 
+                "-o",
+                "-s",
+                // "--max_samples", "40000",
+                "-e", "100",
+                "-b", "128",
+                "-lr", "1e-4", 
+                // "-m", "JacobsUNet",
                 "--loss", "l1_loss",  
                 "--lam", "1",
-                "--down", "3",
+                "--down", "2",
                 "-S2",
                 "-S1",
-                "--NIR",
-                "--feature_dim", "16",
-                "--random_season",
+                "-NIR",
+                "-f", "16",
+                "-rse",
                 "--target_regions", "pri2017",
                 // "--adversarial",
                 // "--CORAL",
                 // "--MMD",
                 // "--resume", "/home/pf/pfstaff/projects/metzgern_Sat2Pop/POMELOv2_results/So2Sat/experiment_386_968/best_model.pth",
                 // "--classifier", "v5",
-                "--excludeZH",
-                "--classifier", "v8",
-                "--supmode", "weaksup"
+                "-exZH",
+                // "--classifier", "v8",
+                // "--supmode", "weaksup"
             ]
         }
     ]
