upload working code for weak supervision

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -493,7 +493,7 @@
                 // "--classifier", "v5",
                 "-exZH",
                 // "--classifier", "v8",
-                // "--supmode", "weaksup"
+                "--supmode", "weaksup"
             ]
         }
     ]
