--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -472,28 +472,33 @@
             "args":[
                 "-o",
                 "-s",
-                // "--max_samples", "40000",
-                "-e", "100",
-                "-b", "128",
+                // "--max_samples", "20000",
+                "-e", "200",
+                "-b", "256",
                 "-lr", "1e-4", 
-                // "-m", "JacobsUNet",
                 "--loss", "l1_loss",  
-                "--lam", "1",
+                "--lam", "1.0",
+                "-lw", "0.1",
                 "--down", "2",
                 "-S2",
                 "-S1",
                 "-NIR",
                 "-f", "16",
                 "-rse",
-                "--target_regions", "pri2017",
-                // "--adversarial",
+                "-treg", "pri2017",
+                "-adv", 
+                "-ladv", "0.01",
+                // "--classif", "v8",
                 // "--CORAL",
+                // "--lam_coral", "0.1",
                 // "--MMD",
-                // "--resume", "/home/pf/pfstaff/projects/metzgern_Sat2Pop/POMELOv2_results/So2Sat/experiment_386_968/best_model.pth",
-                // "--classifier", "v5",
+                // "--lam_mmd", "0.1",
                 "-exZH",
                 // "--classifier", "v8",
-                "--supmode", "weaksup"
+                // "--supmode", "weaksup",
+                // "-mws", "10",
+                // "--val", "5",
+                // "-wma",
             ]
         }
     ]
