--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -474,10 +474,10 @@
                 "-s",
                 // "--max_samples", "20000",
                 "-e", "200",
-                "-b", "256",
+                "-b", "128",
                 "-lr", "1e-4", 
-                "--loss", "l1_loss",  
-                "--lam", "1.0",
+                "--l", "l1_loss",  
+                "--la", "1.0",
                 "-lw", "0.1",
                 "--down", "2",
                 "-S2",
@@ -486,18 +486,19 @@
                 "-f", "16",
                 "-rse",
                 "-treg", "pri2017",
-                "-adv", 
-                "-ladv", "0.01",
+                // "-adv", 
+                // "-ladv", "0.01",
                 // "--classif", "v8",
                 // "--CORAL",
-                // "--lam_coral", "0.1",
+                // "--lam_coral", "10000.0",
                 // "--MMD",
                 // "--lam_mmd", "0.1",
                 "-exZH",
                 // "--classifier", "v8",
-                // "--supmode", "weaksup",
-                // "-mws", "10",
-                // "--val", "5",
+                "--smo", "weaksup",
+                "-mws", "10",
+                "--val", "5",
+                "--full_aug"
                 // "-wma",
             ]
         }
